# apitrace

./: .gitignore  AGENTS.md  CMakeLists.txt  README.en.md  README.md  README.zh-CN.md
.github/workflows/: build-ci.yml
cmake/: find_dxmt_native.cmake
docs/: APITRACE.md  ARCHITECTURE.md  BUILD.md  CAPTURE.md  OVERVIEW.md  PLAN.md  RAW_CAPTURE_EVENT_ENCODING.md  README.md  RETRACE.md  TECHNICAL_DETAILS.md  TRACE_LAYOUT.md
examples/: README.md
examples/sample-trace-bundle/sample.apitrace/: callstream.jsonl  checksums.json
scripts/: build-cmake.sh  build-matrix.sh  check-metal-link-coverage.py  compare-d3d12-present-frames.py  compare-metal-present-frames.py  compare-raw-parity.py  run-d3d12-native-smoke.command  test-cross-api-smoke.sh  test-d3d-metal-link.sh  test-d3d-native-abi.sh  test-d3d11-native.sh  test-d3d11.sh  test-d3d12-native-smoke.sh  test-d3d12-native.sh  test-d3d12.sh  test-metal.sh  test-present-frame-compare.sh  validate-d3d11-retrace-wine.sh  validate-d3d11-wine.sh  validate-d3d12-wine.sh  validate-metal-native.sh
scripts/lib/: poison_present_frame.py  present_frame_compare.py
src/api/: README.md
src/api/src/: version.cpp
src/capture/: README.md
src/capture/src/: capture_hook_plan.cpp  capture_hook_plan.hpp  capture_runtime.cpp  capture_runtime_state.cpp  capture_runtime_state.hpp  trace_session.cpp  trace_session_state.cpp  trace_session_state.hpp
src/d3d11/: README.md
src/d3d11/src/: d3d11_capture.cpp  d3d11_capture_internal.cpp  d3d11_proxy.cpp  (+4 more)
src/d3d12/: README.md
src/metal/: README.md
src/retrace/: README.md
src/tools/: README.md
src/trace/: README.md
test/: .gitignore  CMakeLists.txt  README.md
test/abi-check/: CMakeLists.txt  native_d3d12_smoke.cpp
test/assets/dx11/: indexed_instancing_indices.txt  indexed_instancing_instances.txt  indexed_instancing_vertices.txt  offscreen_copy_composite_composite_quad.txt  offscreen_copy_composite_offscreen_quad.txt  smoke_triangle_vertices.txt  textured_quad_base.rgba
test/fixtures/retrace/d3d11-depth_blend_scissor/depth_blend_scissor-d3d11.apitrace/: callstream.jsonl  checksums.json
test/fixtures/retrace/d3d11-depth_blend_scissor/depth_blend_scissor-d3d11.apitrace/objects/: objects.json
test/fixtures/retrace/d3d11-indexed_instancing/indexed_instancing-d3d11.apitrace/: callstream.jsonl  checksums.json
test/fixtures/retrace/d3d11-indexed_instancing/indexed_instancing-d3d11.apitrace/objects/: objects.json
test/fixtures/retrace/d3d11-mip_sampling/mip_sampling-d3d11.apitrace/: callstream.jsonl  checksums.json
test/fixtures/retrace/d3d11-mip_sampling/mip_sampling-d3d11.apitrace/objects/: objects.json
test/fixtures/retrace/d3d11-msaa_resolve/msaa_resolve-d3d11.apitrace/: callstream.jsonl  checksums.json
test/fixtures/retrace/d3d11-msaa_resolve/msaa_resolve-d3d11.apitrace/objects/: objects.json
test/fixtures/retrace/d3d11-offscreen_copy_composite/offscreen_copy_composite-d3d11.apitrace/: callstream.jsonl  checksums.json
test/fixtures/retrace/d3d11-offscreen_copy_composite/offscreen_copy_composite-d3d11.apitrace/objects/: objects.json
test/fixtures/retrace/d3d11-smoke_triangle/smoke_triangle-d3d11.apitrace/: callstream.jsonl  checksums.json
test/fixtures/retrace/d3d11-smoke_triangle/smoke_triangle-d3d11.apitrace/objects/: objects.json
test/fixtures/retrace/d3d11-textured_quad/textured_quad-d3d11.apitrace/: callstream.jsonl  checksums.json
test/fixtures/retrace/d3d11-textured_quad/textured_quad-d3d11.apitrace/objects/: objects.json
test/fixtures/retrace/d3d11-triangle/: README.md
test/fixtures/retrace/d3d11-triangle/triangle-d3d11.apitrace/: callstream.jsonl  checksums.json
test/fixtures/retrace/d3d11-triangle/triangle-d3d11.apitrace/objects/: objects.json
test/fixtures/retrace/d3d12-scene-all-pixel/: README.md
test/fixtures/retrace/d3d12-scene-all-pixel/dx12-scene-all-pixel.apitrace/: callstream.jsonl  checksums.json
test/fixtures/retrace/d3d12-scene-all-pixel/dx12-scene-all-pixel.apitrace/objects/: objects.json
test/fixtures/retrace/metal-scene-all-pixel/: README.md
test/fixtures/retrace/metal-scene-all-pixel/metal-scene-all-pixel.apitrace/: callstream.jsonl  checksums.json  metal-callstream.jsonl
test/fixtures/retrace/metal-scene-all-pixel/metal-scene-all-pixel.apitrace/analysis/: translation-links.jsonl
test/fixtures/retrace/metal-scene-all-pixel/metal-scene-all-pixel.apitrace/objects/: objects.json
test/src/: d3d11_main.cpp  d3d11_triangle.cpp  d3d12_asset_dump.cpp  d3d12_main.cpp  d3d12_native_asset_dump.cpp  d3d12_triangle.cpp  demo_common.hpp  main.cpp  metal_main.mm  test_bundle_finalize_integrity.cpp  test_cross_api_bundle_closure.cpp  test_d3d11_replay_semantics.cpp  test_d3d12_capture_api.cpp  test_d3d12_native_replay_smoke.cpp  test_d3d12_raw_sink.cpp  test_d3d12_rawonly_unmap_fast_path.cpp  test_d3d12_replay_model_roundtrip.cpp  test_d3d12_replay_semantics.cpp  test_metal_callstream_roundtrip.cpp  test_metal_native_replay_smoke.mm  test_metal_replay_closure.cpp  test_payload_object_refs.cpp  test_raw_capture_io.cpp  test_raw_to_final.cpp  test_trace_session_raw_passthrough.cpp  test_trace_writer_assets.cpp
test/src/app/include/app/: cli.hpp  demo_app.hpp
test/src/app/src/: cli.cpp  demo_app.cpp
test/src/d3d12_replay_semantics/: main.inc
test/src/metal_replay_closure/: main.inc
test/src/runtime/dx11/include/runtime/dx11/: runtime.hpp
test/src/runtime/dx11/src/: runtime.cpp
test/src/runtime/dx12/include/runtime/dx12/: runtime.hpp
test/src/runtime/dx12/src/: runtime.cpp
test/src/runtime/metal/include/runtime/metal/: runtime.hpp
test/src/runtime/metal/src/: runtime.mm
test/src/scenes/dx11/include/scenes/dx11/: scenes.hpp
test/src/scenes/dx11/src/: scenes.cpp
test/src/scenes/dx12/include/scenes/dx12/: scenes.hpp
test/src/scenes/dx12/src/: scenes.cpp
test/src/scenes/metal/include/scenes/metal/: scenes.hpp
test/src/scenes/metal/src/: scenes.mm
test/src/scenes/shared/include/scenes/shared/: scene_matrix.hpp
test/src/scenes/shared/src/: scene_matrix.cpp
test/toolchains/: windows-x86_64-mingw.cmake
(+106 files in other folders)
